byteserde_derive/tests/error_scenarios/struct_unit.rs
use byteserde_derive::ByteSerializeStack;

#[derive(ByteSerializeStack)]
struct StrictUnit;

fn main() {}
